Añadidas funcionalidades de varias vistas y correcciones en diseño

--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -5,7 +5,7 @@
         name="files_root"
         path="Android/data/data/${applicationId}/files"/>
     <files-path
-        name="images"
+        name="files"
         path="."
         />
     <!--<external-path
