--- a/app/src/main/res/layout/text_layout.xml
+++ b/app/src/main/res/layout/text_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:text="TextView"
     android:textStyle="bold"
+    android:textAppearance="?attr/textAppearanceButton"
     android:textSize="25sp"
     android:textColor="@color/white"
     android:textAlignment="center"
